Fix layout issues on mobile

--- a/src/styles/FinalPage.css
+++ b/src/styles/FinalPage.css
@@ -6,8 +6,6 @@
 }
 
 .cvContainer {
-  height: 29.7cm;
-  width: 21cm;
   background: rgb(238, 174, 202);
   background: radial-gradient(
     circle,
@@ -16,9 +14,11 @@
   );
   color: black;
   display: grid;
-  grid-template-rows: 1fr 1fr 1.5fr 100px;
+  grid-template-rows: 1fr 1fr 1.5fr 50px;
   padding: 1em;
   gap: 1em;
+  aspect-ratio: 21/29.7;
+  max-height: 29.7cm;
 }
 
 section {
@@ -27,6 +27,8 @@ section {
   display: grid;
   justify-items: start;
   gap: 0px;
+  padding: 1em;
+  padding-left: 0px;
 }
 
 strong {
@@ -53,4 +55,15 @@ button:hover,
 button:focus {
   scale: 1.1;
   box-shadow: 0px 2px 20px 5px rgba(0, 0, 0, 0.64);
+}
+
+@media (max-width: 600px) {
+  button,
+  .sectionTitle {
+    font-size: 1.1rem;
+  }
+
+  strong {
+    font-size: 1rem;
+  }
 }
