--- a/src/styles/Form.css
+++ b/src/styles/Form.css
@@ -1,6 +1,8 @@
 body {
   display: flex;
   justify-content: center;
+  width: 100%;
+  background-color: black;
 }
 
 form {
@@ -10,7 +12,6 @@ form {
   gap: 1em;
   width: 100%;
   background-color: black;
-  min-height: 100dvh;
 }
 
 form,
@@ -38,8 +39,4 @@ legend {
 
 input {
   border: 1px solid purple;
-}
-
-button#submit {
-  margin: 1em 9em;
 }
